ubsan: metaspaceShared.cpp:1305:57: runtime error: applying non-zero offset 12849152 to null pointer

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 23
    • Affects Version/s: 23
    • Component/s: hotspot
    • b24
    • x86
    • os_x

      When building with ubsan on macOS x86_64, we run into the following error/issue :

      /jdk/src/hotspot/share/cds/metaspaceShared.cpp:1305:57: runtime error: applying non-zero offset 12849152 to null pointer
          #0 0x11f9e4067 in MetaspaceShared::reserve_address_space_for_archives(FileMapInfo*, FileMapInfo*, bool, ReservedSpace&, ReservedSpace&, ReservedSpace&) metaspaceShared.cpp:1305
          #1 0x11f9e352d in MetaspaceShared::map_archives(FileMapInfo*, FileMapInfo*, bool) metaspaceShared.cpp:1050
          #2 0x11f9e2b2c in MetaspaceShared::initialize_runtime_shared_and_meta_spaces() metaspaceShared.cpp:936
          #3 0x11f9d6181 in Metaspace::global_initialize() metaspace.cpp:714
          #4 0x11fecf8ae in universe_init() universe.cpp:869
          #5 0x11f4c50ab in init_globals() init.cpp:128
          #6 0x11fe9c706 in Threads::create_vm(JavaVMInitArgs*, bool*) threads.cpp:553
          #7 0x11f5e8ec3 in JNI_CreateJavaVM jni.cpp:3672
          #8 0x10ce6b7e4 in JavaMain java.c:491
          #9 0x10ce72978 in ThreadJavaMain java_md_macosx.m:720
          #10 0x7fff204338fb in _pthread_start+0xdf (libsystem_pthread.dylib:x86_64+0x68fb)
          #11 0x7fff2042f442 in thread_start+0xe (libsystem_pthread.dylib:x86_64+0x2442)

            Assignee:
            Thomas Stuefe
            Reporter:
            Matthias Baesken
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: